Implementasi DRY di Model Regresi Terbaik.

--- a/Notebook/03_Modeling.ipynb
+++ b/Notebook/03_Modeling.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 164,
       "metadata": {},
       "outputs": [
         {
@@ -149,7 +149,7 @@
               "4  Automatic    39000  Riyadh   72000.0  "
             ]
           },
-          "execution_count": 74,
+          "execution_count": 164,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -195,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 165,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 166,
       "id": "0006360d",
       "metadata": {},
       "outputs": [
@@ -222,7 +222,7 @@
               "Name: Price, dtype: float64"
             ]
           },
-          "execution_count": 76,
+          "execution_count": 166,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 167,
       "metadata": {},
       "outputs": [
         {
@@ -257,7 +257,7 @@
               "((3824, 11), (957, 11))"
             ]
           },
-          "execution_count": 77,
+          "execution_count": 167,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -289,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 168,
       "metadata": {},
       "outputs": [
         {
@@ -306,7 +306,7 @@
               "  'Region'])"
             ]
           },
-          "execution_count": 78,
+          "execution_count": 168,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 169,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -383,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 170,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -401,20 +401,12 @@
         "    train_mae = mean_absolute_error(y_train, y_train_pred)\n",
         "    test_mae  = mean_absolute_error(y_test, y_test_pred)\n",
         "    test_mape = mean_absolute_percentage_error(y_test, y_test_pred)\n",
-        "    test_r2   = r2_score(y_test, y_test_pred)\n",
-        "\n",
-        "    print(f'=== {name} ===')\n",
-        "    print(f'Train MAE : {train_mae:,.2f}')\n",
-        "    print(f'Test MAE  : {test_mae:,.2f}')\n",
-        "    print(f'Test MAPE : {test_mape:.2f}%')\n",
-        "    print(f'Test R^2  : {test_r2:.3f}')\n",
         "\n",
         "    return {\n",
         "        'name': name,\n",
         "        'train_mae': train_mae,\n",
         "        'test_mae': test_mae,\n",
-        "        'test_mape': test_mape,\n",
-        "        'test_r2': test_r2\n",
+        "        'test_mape': test_mape\n",
         "    }"
       ]
     },
@@ -423,240 +415,20 @@
       "id": "60224316",
       "metadata": {},
       "source": [
-        "Evaluasi performa model regresi dilakukan menggunakan **tiga metrik utama** yang saling melengkapi, yaitu **MAE, MAPE, dan R²**. **MAE (Mean Absolute Error)** digunakan sebagai metrik utama karena menunjukkan rata-rata selisih absolut antara harga aktual dan prediksi dalam satuan harga yang sama, sehingga mudah diinterpretasikan secara bisnis. **MAPE (Mean Absolute Percentage Error)** digunakan untuk mengukur kesalahan prediksi secara relatif dalam bentuk persentase, sehingga memungkinkan perbandingan performa model pada mobil dengan rentang harga yang berbeda. Sementara itu, **R² (coefficient of determination)** digunakan sebagai metrik pendukung untuk menggambarkan seberapa besar variasi harga mobil yang dapat dijelaskan oleh model secara keseluruhan. Pada fungsi evaluasi, MAE dihitung untuk data latih dan data uji guna memantau potensi **overfitting**, sedangkan MAPE dan R² difokuskan pada data uji untuk menilai kemampuan generalisasi model pada data yang belum pernah dilihat sebelumnya."
+        "Evaluasi model regresi pada fungsi ini difokuskan pada **MAE dan MAPE** untuk menjaga penilaian performa tetap sederhana dan relevan dengan tujuan prediksi harga. **MAE** dihitung pada data latih dan data uji untuk memantau potensi **overfitting** melalui perbandingan kesalahan absolut rata-rata, sedangkan **MAPE** dihitung pada data uji untuk menilai **kesalahan relatif** model dalam bentuk persentase pada data yang belum pernah dilihat sebelumnya. Pendekatan ini memastikan evaluasi berfokus pada akurasi prediksi yang dapat diinterpretasikan secara bisnis tanpa menambahkan metrik yang tidak memberikan insight tambahan."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3.7 Baseline Model: Linear Regression\n",
-        "\n",
-        "Sebagai baseline, kita gunakan model regresi linear sederhana yang dikombinasikan dengan pipeline preprocessing."
+        "## 3.7 Mencari Model Regresi Terbaik"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "=== Linear Regression ===\n",
-            "Train MAE : 11,219.46\n",
-            "Test MAE  : 13,151.33\n",
-            "Test MAPE : 111.77%\n",
-            "Test R^2  : 0.758\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "{'name': 'Linear Regression',\n",
-              " 'train_mae': 11219.45715124949,\n",
-              " 'test_mae': 13151.334845472413,\n",
-              " 'test_mape': np.float64(111.7723720752428),\n",
-              " 'test_r2': 0.7582921470331874}"
-            ]
-          },
-          "execution_count": 81,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "linreg_model = Pipeline(steps=[\n",
-        "    ('preprocessor', preprocessor),\n",
-        "    ('model', LinearRegression())\n",
-        "])\n",
-        "\n",
-        "linreg_model.fit(X_train, y_train)\n",
-        "metrics_linreg = evaluate_regression(linreg_model, X_train, y_train, X_test, y_test, 'Linear Regression')\n",
-        "metrics_linreg"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 3.8 Tree-based Models: Random Forest dan Gradient Boosting\n",
-        "\n",
-        "Model berbasis pohon keputusan sering memberikan performa yang baik untuk problem regresi tabular seperti ini.\n",
-        "\n",
-        "Kita coba dua model:\n",
-        "- RandomForestRegressor\n",
-        "- GradientBoostingRegressor"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 82,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "=== Random Forest ===\n",
-            "Train MAE : 4,450.46\n",
-            "Test MAE  : 12,218.70\n",
-            "Test MAPE : 116.81%\n",
-            "Test R^2  : 0.735\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "{'name': 'Random Forest',\n",
-              " 'train_mae': 4450.45910938434,\n",
-              " 'test_mae': 12218.697541299696,\n",
-              " 'test_mape': np.float64(116.81262794446643),\n",
-              " 'test_r2': 0.7345694610109201}"
-            ]
-          },
-          "execution_count": 82,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# Random Forest\n",
-        "rf_model = Pipeline(steps=[\n",
-        "    ('preprocessor', preprocessor),\n",
-        "    ('model', RandomForestRegressor(\n",
-        "        n_estimators=200,\n",
-        "        random_state=42,\n",
-        "        n_jobs=-1\n",
-        "    ))\n",
-        "])\n",
-        "\n",
-        "rf_model.fit(X_train, y_train)\n",
-        "metrics_rf = evaluate_regression(rf_model, X_train, y_train, X_test, y_test, 'Random Forest')\n",
-        "metrics_rf"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 83,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "=== Gradient Boosting ===\n",
-            "Train MAE : 12,648.87\n",
-            "Test MAE  : 14,052.28\n",
-            "Test MAPE : 116.68%\n",
-            "Test R^2  : 0.719\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "{'name': 'Gradient Boosting',\n",
-              " 'train_mae': 12648.872253773005,\n",
-              " 'test_mae': 14052.283848298148,\n",
-              " 'test_mape': np.float64(116.68405710871914),\n",
-              " 'test_r2': 0.7192712912813326}"
-            ]
-          },
-          "execution_count": 83,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# Gradient Boosting\n",
-        "gbr_model = Pipeline(steps=[\n",
-        "    ('preprocessor', preprocessor),\n",
-        "    ('model', GradientBoostingRegressor(\n",
-        "        random_state=42\n",
-        "    ))\n",
-        "])\n",
-        "\n",
-        "gbr_model.fit(X_train, y_train)\n",
-        "metrics_gbr = evaluate_regression(gbr_model, X_train, y_train, X_test, y_test, 'Gradient Boosting')\n",
-        "metrics_gbr"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 3.9 Model Gradient Boosting Lanjut: XGBoost\n",
-        "\n",
-        "XGBoost seringkali memberikan performa yang sangat baik pada data tabular.\n",
-        "\n",
-        "Kita gunakan konfigurasi awal yang sederhana dan dapat dituning lebih lanjut jika diperlukan."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 84,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "=== XGBoost ===\n",
-            "Train MAE : 7,468.42\n",
-            "Test MAE  : 11,358.78\n",
-            "Test MAPE : 108.77%\n",
-            "Test R^2  : 0.785\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "{'name': 'XGBoost',\n",
-              " 'train_mae': 7468.418734243225,\n",
-              " 'test_mae': 11358.776026360045,\n",
-              " 'test_mape': np.float64(108.77199758035023),\n",
-              " 'test_r2': 0.7851535739918256}"
-            ]
-          },
-          "execution_count": 84,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "xgb_model = Pipeline(steps=[\n",
-        "    ('preprocessor', preprocessor),\n",
-        "    ('model', XGBRegressor(\n",
-        "        n_estimators=400,\n",
-        "        learning_rate=0.05,\n",
-        "        max_depth=6,\n",
-        "        subsample=0.8,\n",
-        "        colsample_bytree=0.8,\n",
-        "        objective='reg:squarederror',\n",
-        "        random_state=42,\n",
-        "        n_jobs=-1\n",
-        "    ))\n",
-        "])\n",
-        "\n",
-        "xgb_model.fit(X_train, y_train)\n",
-        "metrics_xgb = evaluate_regression(xgb_model, X_train, y_train, X_test, y_test, 'XGBoost')\n",
-        "metrics_xgb"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 3.10 Ringkasan Perbandingan Model\n",
-        "\n",
-        "        \n",
-        "Kita satukan hasil evaluasi semua model ke dalam satu DataFrame untuk memudahkan perbandingan."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 171,
+      "id": "78c97807",
       "metadata": {},
       "outputs": [
         {
@@ -684,7 +456,6 @@
               "      <th>train_mae</th>\n",
               "      <th>test_mae</th>\n",
               "      <th>test_mape</th>\n",
-              "      <th>test_r2</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -694,7 +465,6 @@
               "      <td>7468.418734</td>\n",
               "      <td>11358.776026</td>\n",
               "      <td>108.771998</td>\n",
-              "      <td>0.785154</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -702,7 +472,6 @@
               "      <td>4450.459109</td>\n",
               "      <td>12218.697541</td>\n",
               "      <td>116.812628</td>\n",
-              "      <td>0.734569</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
@@ -710,7 +479,6 @@
               "      <td>11219.457151</td>\n",
               "      <td>13151.334845</td>\n",
               "      <td>111.772372</td>\n",
-              "      <td>0.758292</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -718,38 +486,73 @@
               "      <td>12648.872254</td>\n",
               "      <td>14052.283848</td>\n",
               "      <td>116.684057</td>\n",
-              "      <td>0.719271</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                name     train_mae      test_mae   test_mape   test_r2\n",
-              "3            XGBoost   7468.418734  11358.776026  108.771998  0.785154\n",
-              "1      Random Forest   4450.459109  12218.697541  116.812628  0.734569\n",
-              "0  Linear Regression  11219.457151  13151.334845  111.772372  0.758292\n",
-              "2  Gradient Boosting  12648.872254  14052.283848  116.684057  0.719271"
+              "                name     train_mae      test_mae   test_mape\n",
+              "3            XGBoost   7468.418734  11358.776026  108.771998\n",
+              "1      Random Forest   4450.459109  12218.697541  116.812628\n",
+              "0  Linear Regression  11219.457151  13151.334845  111.772372\n",
+              "2  Gradient Boosting  12648.872254  14052.283848  116.684057"
             ]
           },
-          "execution_count": 85,
+          "execution_count": 171,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "results = [metrics_linreg, metrics_rf, metrics_gbr, metrics_xgb]\n",
-        "results_df = pd.DataFrame(results)\n",
-        "results_df.sort_values('test_mae')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Biasanya, model dengan **test MAE** dan **MAPE** paling rendah dan **R squared** yang cukup tinggi akan dipilih sebagai kandidat model terbaik.\n",
+        "models = {\n",
+        "    'Linear Regression': LinearRegression(),\n",
         "\n",
-        "Pada tahap berikutnya (Deployment), kita akan menyimpan model terbaik dan menyiapkan fungsi prediksi yang siap diintegrasikan dengan aplikasi atau API."
+        "    'Random Forest': RandomForestRegressor(\n",
+        "        n_estimators=200,\n",
+        "        random_state=42,\n",
+        "        n_jobs=-1\n",
+        "    ),\n",
+        "\n",
+        "    'Gradient Boosting': GradientBoostingRegressor(\n",
+        "        random_state=42\n",
+        "    ),\n",
+        "\n",
+        "    'XGBoost': XGBRegressor(\n",
+        "        n_estimators=400,\n",
+        "        learning_rate=0.05,\n",
+        "        max_depth=6,\n",
+        "        subsample=0.8,\n",
+        "        colsample_bytree=0.8,\n",
+        "        objective='reg:squarederror',\n",
+        "        random_state=42,\n",
+        "        n_jobs=-1\n",
+        "    )\n",
+        "}\n",
+        "\n",
+        "results = []\n",
+        "\n",
+        "for name, model in models.items():\n",
+        "    pipeline = Pipeline(steps=[\n",
+        "        ('preprocessor', preprocessor),\n",
+        "        ('model', model)\n",
+        "    ])\n",
+        "\n",
+        "    pipeline.fit(X_train, y_train)\n",
+        "\n",
+        "    metrics = evaluate_regression(\n",
+        "        pipeline,\n",
+        "        X_train, y_train,\n",
+        "        X_test, y_test,\n",
+        "        name\n",
+        "    )\n",
+        "\n",
+        "    results.append(metrics)\n",
+        "\n",
+        "results_df = pd.DataFrame(results)\n",
+        "results_df = results_df.sort_values('test_mae')\n",
+        "results_df\n",
+        "\n"
       ]
     }
   ],
