Ganti metode TTS menjadi cross val.

--- a/Notebook/03_Modeling.ipynb
+++ b/Notebook/03_Modeling.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -149,7 +149,7 @@
               "4  Automatic    39000  Riyadh   72000.0  "
             ]
           },
-          "execution_count": 164,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -171,6 +171,7 @@
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
         "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+        "from sklearn.model_selection import KFold, cross_val_score\n",
         "\n",
         "from xgboost import XGBRegressor\n",
         "\n",
@@ -195,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -207,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 13,
       "id": "0006360d",
       "metadata": {},
       "outputs": [
@@ -222,7 +223,7 @@
               "Name: Price, dtype: float64"
             ]
           },
-          "execution_count": 166,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -248,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -257,7 +258,7 @@
               "((3824, 11), (957, 11))"
             ]
           },
-          "execution_count": 167,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -289,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -306,7 +307,7 @@
               "  'Region'])"
             ]
           },
-          "execution_count": 168,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -344,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -376,14 +377,15 @@
     },
     {
       "cell_type": "markdown",
+      "id": "dd8e16f3",
       "metadata": {},
       "source": [
-        "## 3.6 Fungsi Evaluasi Model"
+        "## 3.6 Mencari Model Regresi Terbaik"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -419,91 +421,11 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 3.7 Mencari Model Regresi Terbaik"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": 18,
       "id": "78c97807",
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>name</th>\n",
-              "      <th>train_mae</th>\n",
-              "      <th>test_mae</th>\n",
-              "      <th>test_mape</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>XGBoost</td>\n",
-              "      <td>7468.418734</td>\n",
-              "      <td>11358.776026</td>\n",
-              "      <td>108.771998</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Random Forest</td>\n",
-              "      <td>4450.459109</td>\n",
-              "      <td>12218.697541</td>\n",
-              "      <td>116.812628</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>Linear Regression</td>\n",
-              "      <td>11219.457151</td>\n",
-              "      <td>13151.334845</td>\n",
-              "      <td>111.772372</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>Gradient Boosting</td>\n",
-              "      <td>12648.872254</td>\n",
-              "      <td>14052.283848</td>\n",
-              "      <td>116.684057</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                name     train_mae      test_mae   test_mape\n",
-              "3            XGBoost   7468.418734  11358.776026  108.771998\n",
-              "1      Random Forest   4450.459109  12218.697541  116.812628\n",
-              "0  Linear Regression  11219.457151  13151.334845  111.772372\n",
-              "2  Gradient Boosting  12648.872254  14052.283848  116.684057"
-            ]
-          },
-          "execution_count": 171,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "models = {\n",
         "    'Linear Regression': LinearRegression(),\n",
@@ -528,7 +450,17 @@
         "        random_state=42,\n",
         "        n_jobs=-1\n",
         "    )\n",
-        "}\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "id": "20cae9c9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cv = KFold(n_splits=5, shuffle=True, random_state=42)\n",
         "\n",
         "results = []\n",
         "\n",
@@ -538,21 +470,114 @@
         "        ('model', model)\n",
         "    ])\n",
         "\n",
+        "    # Cross-validation MAE (di train saja)\n",
+        "    cv_mae = -cross_val_score(\n",
+        "        pipeline,\n",
+        "        X_train,\n",
+        "        y_train,\n",
+        "        cv=cv,\n",
+        "        scoring='neg_mean_absolute_error',\n",
+        "        n_jobs=-1\n",
+        "    ).mean()\n",
+        "\n",
+        "    # Fit final model di full train\n",
         "    pipeline.fit(X_train, y_train)\n",
         "\n",
-        "    metrics = evaluate_regression(\n",
-        "        pipeline,\n",
-        "        X_train, y_train,\n",
-        "        X_test, y_test,\n",
-        "        name\n",
-        "    )\n",
+        "    # Evaluasi di test\n",
+        "    y_test_pred = pipeline.predict(X_test)\n",
+        "    test_mae = mean_absolute_error(y_test, y_test_pred)\n",
+        "    test_mape = mean_absolute_percentage_error(y_test, y_test_pred)\n",
         "\n",
-        "    results.append(metrics)\n",
-        "\n",
-        "results_df = pd.DataFrame(results)\n",
-        "results_df = results_df.sort_values('test_mae')\n",
-        "results_df\n",
-        "\n"
+        "    results.append({\n",
+        "        'model': name,\n",
+        "        'cv_mae': cv_mae,\n",
+        "        'test_mae': test_mae,\n",
+        "        'test_mape': test_mape\n",
+        "    })\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "id": "f9213b35",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>model</th>\n",
+              "      <th>cv_mae</th>\n",
+              "      <th>test_mae</th>\n",
+              "      <th>test_mape</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>XGBoost</td>\n",
+              "      <td>11373.760919</td>\n",
+              "      <td>11358.776026</td>\n",
+              "      <td>108.771998</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Random Forest</td>\n",
+              "      <td>12419.165527</td>\n",
+              "      <td>12218.697541</td>\n",
+              "      <td>116.812628</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Linear Regression</td>\n",
+              "      <td>13266.486254</td>\n",
+              "      <td>13151.334845</td>\n",
+              "      <td>111.772372</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Gradient Boosting</td>\n",
+              "      <td>13856.587051</td>\n",
+              "      <td>14052.283848</td>\n",
+              "      <td>116.684057</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "               model        cv_mae      test_mae   test_mape\n",
+              "3            XGBoost  11373.760919  11358.776026  108.771998\n",
+              "1      Random Forest  12419.165527  12218.697541  116.812628\n",
+              "0  Linear Regression  13266.486254  13151.334845  111.772372\n",
+              "2  Gradient Boosting  13856.587051  14052.283848  116.684057"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "results_df = pd.DataFrame(results).sort_values('test_mae')\n",
+        "results_df"
       ]
     }
   ],
