--- a/Notebook/03_Modeling.ipynb
+++ b/Notebook/03_Modeling.ipynb
@@ -191,7 +191,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3.2 Menyiapkan Fitur dan Target"
+        "## 3.1 Menyiapkan Fitur dan Target"
       ]
     },
     {
@@ -244,7 +244,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3.3 Train–Test Split"
+        "## 3.2 Train–Test Split"
       ]
     },
     {
@@ -283,9 +283,10 @@
     },
     {
       "cell_type": "markdown",
+      "id": "c85eb28f",
       "metadata": {},
       "source": [
-        "## 3.4 Menentukan Kolom Numerik dan Kategorikal"
+        "## 3.3 Pipeline Preprocessing"
       ]
     },
     {
@@ -328,19 +329,7 @@
       "id": "fe0bcbd1",
       "metadata": {},
       "source": [
-        "Langkah ini bertujuan untuk **memisahkan fitur numerik dan kategorikal** secara eksplisit sebelum proses preprocessing. Dari hasil di atas, fitur **numerik** yang teridentifikasi adalah **Year, Engine_Size,** dan **Mileage** (sementara **Car_Age** tidak muncul karena kolom tersebut tidak tersedia di `X_train`), sedangkan fitur **kategorikal** mencakup atribut deskriptif kendaraan seperti **Make, Type, Origin, Color, Options, Fuel_Type, Gear_Type,** dan **Region**. Pemisahan ini penting karena masing-masing tipe fitur memerlukan perlakuan preprocessing yang berbeda—numerik akan diimputasi dan diskalakan, sedangkan kategorikal akan diimputasi dan diubah menjadi representasi numerik melalui one-hot encoding—sehingga pipeline modeling menjadi lebih terstruktur dan robust.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 3.5 Pipeline Preprocessing\n",
-        "\n",
-        "- Fitur numerik: imputasi median lalu scaling standar.\n",
-        "- Fitur kategorikal: imputasi modus lalu one-hot encoding.\n",
-        "\n",
-        "Kita gunakan `ColumnTransformer` untuk menggabungkan dua jenis preprocessing ini dalam satu pipeline."
+        "**Memisahkan fitur numerik dan kategorikal** secara eksplisit dilakukan sebelum proses preprocessing. Dari hasil di atas, fitur **numerik** yang teridentifikasi adalah **Year, Engine_Size,** dan **Mileage** (sementara **Car_Age** tidak muncul karena kolom tersebut tidak tersedia di `X_train`), sedangkan fitur **kategorikal** mencakup atribut deskriptif kendaraan seperti **Make, Type, Origin, Color, Options, Fuel_Type, Gear_Type,** dan **Region**. Pemisahan ini penting karena masing-masing tipe fitur memerlukan perlakuan preprocessing yang berbeda—numerik akan diimputasi dan diskalakan, sedangkan kategorikal akan diimputasi dan diubah menjadi representasi numerik melalui one-hot encoding—sehingga pipeline modeling menjadi lebih terstruktur dan robust.\n"
       ]
     },
     {
@@ -380,7 +369,7 @@
       "id": "dd8e16f3",
       "metadata": {},
       "source": [
-        "## 3.6 Mencari Model Regresi Terbaik"
+        "## 3.4 Cross-Validation -> Mencari Model Regresi Terbaik"
       ]
     },
     {
