--- a/Notebook/03_Modeling.ipynb
+++ b/Notebook/03_Modeling.ipynb
@@ -613,6 +613,14 @@
     },
     {
       "cell_type": "markdown",
+      "id": "38264054",
+      "metadata": {},
+      "source": [
+        "Evaluasi model dilakukan menggunakan cross-validation 5-fold dengan metrik MAE pada data latih serta evaluasi pada data uji terpisah untuk menilai kemampuan generalisasi. Hasil menunjukkan bahwa **XGBoost** memiliki **CV MAE rata-rata dan test MAE terendah**, dengan selisih yang sangat kecil di antara keduanya, sehingga mengindikasikan **generalisasi yang baik tanpa overfitting**. Model lain seperti Random Forest dan Linear Regression menunjukkan performa yang konsisten antara CV dan data uji namun dengan tingkat kesalahan yang lebih tinggi, sementara Gradient Boosting memiliki MAE tertinggi yang mengindikasikan underfitting relatif. Dari sisi stabilitas, nilai standar deviasi MAE antar fold berada pada rentang yang wajar untuk seluruh model, dan waktu eksekusi XGBoost masih kompetitif, sehingga secara keseluruhan XGBoost dipilih sebagai model terbaik berdasarkan kombinasi akurasi, stabilitas, dan biaya komputasi.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "328967cd",
       "metadata": {},
       "source": [
