--- a/Notebook/02_Data Acquisition And Understanding.ipynb
+++ b/Notebook/02_Data Acquisition And Understanding.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 233,
+      "execution_count": 207,
       "metadata": {},
       "outputs": [
         {
@@ -178,7 +178,7 @@
               "4    41912  Riyadh       59500       False  "
             ]
           },
-          "execution_count": 233,
+          "execution_count": 207,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -191,6 +191,7 @@
         "import seaborn as sns\n",
         "import warnings\n",
         "import missingno as msno\n",
+        "from datetime import datetime\n",
         "\n",
         "warnings.filterwarnings('ignore')\n",
         "pd.set_option('display.max_columns', None)\n",
@@ -242,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 234,
+      "execution_count": 208,
       "id": "56bd6579",
       "metadata": {},
       "outputs": [
@@ -284,7 +285,7 @@
       "id": "4c63146f",
       "metadata": {},
       "source": [
-        "Dataset ini terdiri dari 8.248 baris dan 15 kolom dengan ukuran sekitar 910 KB, di mana sebagian besar tipe data sudah sesuai, yaitu numerik (`Year`, `Mileage`, `Engine_Size`), boolean (`Negotiable`), dan kategorikal, namun kolom `Price` masih bertipe `object` sehingga perlu dikonversi ke numerik sebelum analisis lebih lanjut; dari sisi kelengkapan data, isu utama terdapat pada `Engine_Size` yang memiliki sekitar 27,5% nilai hilang sehingga sebaiknya dilakukan imputasi berbasis grup (misalnya `Make–Type–Year`) daripada menghapus data, sementara missing pada `Origin`, `Options`, dan `Gear_Type` relatif kecil dan aman diisi dengan nilai modus atau kategori “Unknown”, sehingga setelah konversi tipe data, penanganan missing values, serta penambahan fitur turunan seperti `Car_Age`, dataset ini sudah cukup bersih dan layak digunakan untuk pemodelan regresi harga mobil bekas maupun analisis harga wajar.\n"
+        "Dataset ini terdiri dari 8.248 baris dan 15 kolom dengan ukuran sekitar 910 KB, di mana sebagian besar tipe data sudah sesuai, yaitu numerik (`Year`, `Mileage`, `Engine_Size`), boolean (`Negotiable`), dan kategorikal, namun kolom `Price` masih bertipe `object` sehingga perlu dikonversi ke numerik sebelum analisis lebih lanjut; dari sisi kelengkapan data, isu utama terdapat pada `Engine_Size` yang memiliki sekitar 27,5% nilai hilang sehingga sebaiknya dilakukan imputasi berbasis grup (misalnya `Make–Type–Year`) daripada menghapus data, sementara missing pada `Origin`, `Options`, dan `Gear_Type` relatif kecil dan aman diisi dengan nilai modus atau kategori “Unknown”, sehingga setelah konversi tipe data, penanganan missing values, serta penambahan fitur turunan seperti `Car_Age`, dataset ini sudah cukup bersih dan layak digunakan untuk pemodelan regresi harga mobil bekas maupun analisis harga wajar."
       ]
     },
     {
@@ -297,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 235,
+      "execution_count": 209,
       "id": "592ab46a",
       "metadata": {},
       "outputs": [
@@ -603,7 +604,7 @@
               "Negotiable        NaN         NaN  "
             ]
           },
-          "execution_count": 235,
+          "execution_count": 209,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -668,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 236,
+      "execution_count": 210,
       "metadata": {},
       "outputs": [
         {
@@ -828,7 +829,7 @@
               "14                                             [Used]  "
             ]
           },
-          "execution_count": 236,
+          "execution_count": 210,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -850,7 +851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 237,
+      "execution_count": 211,
       "id": "de27b541",
       "metadata": {},
       "outputs": [],
@@ -959,7 +960,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 238,
+      "execution_count": 212,
       "id": "4912cb36",
       "metadata": {},
       "outputs": [
@@ -969,7 +970,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 238,
+          "execution_count": 212,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1007,7 +1008,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 239,
+      "execution_count": 213,
       "id": "ac225b88",
       "metadata": {},
       "outputs": [],
@@ -1061,7 +1062,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 240,
+      "execution_count": 214,
       "id": "f00ad75f",
       "metadata": {},
       "outputs": [
@@ -1142,7 +1143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 241,
+      "execution_count": 215,
       "id": "6956d04e",
       "metadata": {},
       "outputs": [
@@ -1222,7 +1223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 242,
+      "execution_count": 216,
       "id": "b603536a",
       "metadata": {},
       "outputs": [
@@ -1302,7 +1303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 243,
+      "execution_count": 217,
       "id": "ba18c892",
       "metadata": {},
       "outputs": [
@@ -1390,7 +1391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 244,
+      "execution_count": 218,
       "id": "6e104aca",
       "metadata": {},
       "outputs": [
@@ -1407,7 +1408,7 @@
               "np.int64(0)"
             ]
           },
-          "execution_count": 244,
+          "execution_count": 218,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1467,7 +1468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 245,
+      "execution_count": 219,
       "id": "c967663f",
       "metadata": {},
       "outputs": [
@@ -1477,7 +1478,7 @@
               "(8248, 12)"
             ]
           },
-          "execution_count": 245,
+          "execution_count": 219,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1506,7 +1507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 246,
+      "execution_count": 220,
       "id": "3cb63618",
       "metadata": {},
       "outputs": [
@@ -1545,7 +1546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 247,
+      "execution_count": 221,
       "id": "bc330727",
       "metadata": {},
       "outputs": [
@@ -1612,12 +1613,12 @@
       "id": "90afc097",
       "metadata": {},
       "source": [
-        "## 2.11 Konversi Tipe Data"
+        "## 2.9 Konversi Tipe Data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 248,
+      "execution_count": 222,
       "id": "dbfc27e3",
       "metadata": {},
       "outputs": [
@@ -1678,6 +1679,66 @@
     },
     {
       "cell_type": "markdown",
+      "id": "3d48c494",
+      "metadata": {},
+      "source": [
+        "## 2.10 Feature Engineering"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 223,
+      "id": "4763a429",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from datetime import datetime\n",
+        "import numpy as np\n",
+        "\n",
+        "# =========================\n",
+        "# Feature Engineering\n",
+        "# =========================\n",
+        "CURRENT_YEAR = 2025 # Asumsi\n",
+        "\n",
+        "# Pastikan tipe data numerik\n",
+        "df['Year'] = pd.to_numeric(df['Year'], errors='coerce')\n",
+        "df['Mileage'] = pd.to_numeric(df['Mileage'], errors='coerce')\n",
+        "\n",
+        "# Hitung umur mobil\n",
+        "df['Car_Age'] = CURRENT_YEAR - df['Year']\n",
+        "df['Car_Age'] = df['Car_Age'].clip(lower=0)\n",
+        "\n",
+        "# Hitung mileage per year (hindari pembagian nol)\n",
+        "df['Mileage_per_Year'] = df['Mileage'] / (df['Car_Age'] + 1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 224,
+      "id": "22f91ddf",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# =========================\n",
+        "# Feature Engineering: Price Segment\n",
+        "# =========================\n",
+        "\n",
+        "# Pastikan Price numerik\n",
+        "df['Price'] = pd.to_numeric(df['Price'], errors='coerce')\n",
+        "\n",
+        "# Drop sementara NaN (jika ada)\n",
+        "price_series = df['Price'].dropna()\n",
+        "\n",
+        "# Buat segmentasi harga berbasis kuantil\n",
+        "df.loc[price_series.index, 'Price_Segment'] = pd.qcut(\n",
+        "    price_series,\n",
+        "    q=3,\n",
+        "    labels=['Low', 'Mid', 'High']\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "d17336be",
       "metadata": {},
       "source": [
@@ -1694,7 +1755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 249,
+      "execution_count": 225,
       "id": "28ec2f05",
       "metadata": {},
       "outputs": [
@@ -1774,7 +1835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 250,
+      "execution_count": 226,
       "id": "b16f538b",
       "metadata": {},
       "outputs": [
@@ -1854,7 +1915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 251,
+      "execution_count": 227,
       "id": "06f9ee37",
       "metadata": {},
       "outputs": [
@@ -1934,7 +1995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 252,
+      "execution_count": 228,
       "id": "a9a92aa7",
       "metadata": {},
       "outputs": [],
@@ -2000,7 +2061,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 253,
+      "execution_count": 229,
       "id": "9fbb0c28",
       "metadata": {},
       "outputs": [
@@ -2033,7 +2094,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 254,
+      "execution_count": 230,
       "id": "59fe59dd",
       "metadata": {},
       "outputs": [
@@ -2066,7 +2127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 255,
+      "execution_count": 231,
       "id": "4403b344",
       "metadata": {},
       "outputs": [
@@ -2099,7 +2160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 256,
+      "execution_count": 232,
       "id": "acda230b",
       "metadata": {},
       "outputs": [
@@ -2132,7 +2193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 257,
+      "execution_count": 233,
       "id": "7ddec250",
       "metadata": {},
       "outputs": [
@@ -2165,7 +2226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 258,
+      "execution_count": 234,
       "id": "6ff37fc5",
       "metadata": {},
       "outputs": [
@@ -2198,7 +2259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 259,
+      "execution_count": 235,
       "id": "1c97a108",
       "metadata": {},
       "outputs": [
@@ -2231,7 +2292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 260,
+      "execution_count": 236,
       "id": "a48d8d46",
       "metadata": {},
       "outputs": [
@@ -2272,7 +2333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 261,
+      "execution_count": 237,
       "id": "df2e1819",
       "metadata": {},
       "outputs": [],
@@ -2332,7 +2393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 262,
+      "execution_count": 238,
       "id": "84313e63",
       "metadata": {},
       "outputs": [
@@ -2365,7 +2426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 263,
+      "execution_count": 239,
       "id": "18e1368b",
       "metadata": {},
       "outputs": [
@@ -2398,7 +2459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 264,
+      "execution_count": 240,
       "id": "5761e9ea",
       "metadata": {},
       "outputs": [
@@ -2434,12 +2495,12 @@
       "id": "0237b956",
       "metadata": {},
       "source": [
-        "## 2.11 Simpan Dataset Bersih"
+        "## 2.12 Simpan Dataset Bersih"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 265,
+      "execution_count": 241,
       "id": "c89ba2c2",
       "metadata": {},
       "outputs": [
