--- a/Notebook/02_Data Acquisition And Understanding.ipynb
+++ b/Notebook/02_Data Acquisition And Understanding.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 207,
+      "execution_count": 242,
       "metadata": {},
       "outputs": [
         {
@@ -178,7 +178,7 @@
               "4    41912  Riyadh       59500       False  "
             ]
           },
-          "execution_count": 207,
+          "execution_count": 242,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -243,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 208,
+      "execution_count": 243,
       "id": "56bd6579",
       "metadata": {},
       "outputs": [
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 209,
+      "execution_count": 244,
       "id": "592ab46a",
       "metadata": {},
       "outputs": [
@@ -604,7 +604,7 @@
               "Negotiable        NaN         NaN  "
             ]
           },
-          "execution_count": 209,
+          "execution_count": 244,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -669,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 210,
+      "execution_count": 245,
       "metadata": {},
       "outputs": [
         {
@@ -829,7 +829,7 @@
               "14                                             [Used]  "
             ]
           },
-          "execution_count": 210,
+          "execution_count": 245,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -851,7 +851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 211,
+      "execution_count": 246,
       "id": "de27b541",
       "metadata": {},
       "outputs": [],
@@ -960,7 +960,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 212,
+      "execution_count": 247,
       "id": "4912cb36",
       "metadata": {},
       "outputs": [
@@ -970,7 +970,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 212,
+          "execution_count": 247,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1008,7 +1008,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 213,
+      "execution_count": 248,
       "id": "ac225b88",
       "metadata": {},
       "outputs": [],
@@ -1062,7 +1062,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 214,
+      "execution_count": 249,
       "id": "f00ad75f",
       "metadata": {},
       "outputs": [
@@ -1143,7 +1143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 250,
       "id": "6956d04e",
       "metadata": {},
       "outputs": [
@@ -1223,7 +1223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 216,
+      "execution_count": 251,
       "id": "b603536a",
       "metadata": {},
       "outputs": [
@@ -1303,7 +1303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 217,
+      "execution_count": 252,
       "id": "ba18c892",
       "metadata": {},
       "outputs": [
@@ -1391,7 +1391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 218,
+      "execution_count": 253,
       "id": "6e104aca",
       "metadata": {},
       "outputs": [
@@ -1408,7 +1408,7 @@
               "np.int64(0)"
             ]
           },
-          "execution_count": 218,
+          "execution_count": 253,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1468,7 +1468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 219,
+      "execution_count": 254,
       "id": "c967663f",
       "metadata": {},
       "outputs": [
@@ -1478,7 +1478,7 @@
               "(8248, 12)"
             ]
           },
-          "execution_count": 219,
+          "execution_count": 254,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1507,7 +1507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 220,
+      "execution_count": 255,
       "id": "3cb63618",
       "metadata": {},
       "outputs": [
@@ -1546,7 +1546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 221,
+      "execution_count": 256,
       "id": "bc330727",
       "metadata": {},
       "outputs": [
@@ -1618,7 +1618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 222,
+      "execution_count": 257,
       "id": "dbfc27e3",
       "metadata": {},
       "outputs": [
@@ -1682,12 +1682,12 @@
       "id": "3d48c494",
       "metadata": {},
       "source": [
-        "## 2.10 Feature Engineering"
+        "## 2.10 Feature Engineering (Non-Target)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 223,
+      "execution_count": 258,
       "id": "4763a429",
       "metadata": {},
       "outputs": [],
@@ -1714,7 +1714,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 224,
+      "execution_count": 259,
       "id": "22f91ddf",
       "metadata": {},
       "outputs": [],
@@ -1755,7 +1755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 225,
+      "execution_count": 260,
       "id": "28ec2f05",
       "metadata": {},
       "outputs": [
@@ -1835,7 +1835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 226,
+      "execution_count": 261,
       "id": "b16f538b",
       "metadata": {},
       "outputs": [
@@ -1915,7 +1915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 227,
+      "execution_count": 262,
       "id": "06f9ee37",
       "metadata": {},
       "outputs": [
@@ -1995,7 +1995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 228,
+      "execution_count": 263,
       "id": "a9a92aa7",
       "metadata": {},
       "outputs": [],
@@ -2061,7 +2061,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 229,
+      "execution_count": 264,
       "id": "9fbb0c28",
       "metadata": {},
       "outputs": [
@@ -2094,7 +2094,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 230,
+      "execution_count": 265,
       "id": "59fe59dd",
       "metadata": {},
       "outputs": [
@@ -2127,7 +2127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 231,
+      "execution_count": 266,
       "id": "4403b344",
       "metadata": {},
       "outputs": [
@@ -2160,7 +2160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 232,
+      "execution_count": 267,
       "id": "acda230b",
       "metadata": {},
       "outputs": [
@@ -2193,7 +2193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 233,
+      "execution_count": 268,
       "id": "7ddec250",
       "metadata": {},
       "outputs": [
@@ -2226,7 +2226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 234,
+      "execution_count": 269,
       "id": "6ff37fc5",
       "metadata": {},
       "outputs": [
@@ -2259,7 +2259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 235,
+      "execution_count": 270,
       "id": "1c97a108",
       "metadata": {},
       "outputs": [
@@ -2292,7 +2292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 236,
+      "execution_count": 271,
       "id": "a48d8d46",
       "metadata": {},
       "outputs": [
@@ -2333,7 +2333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 237,
+      "execution_count": 272,
       "id": "df2e1819",
       "metadata": {},
       "outputs": [],
@@ -2393,7 +2393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 238,
+      "execution_count": 273,
       "id": "84313e63",
       "metadata": {},
       "outputs": [
@@ -2426,7 +2426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 239,
+      "execution_count": 274,
       "id": "18e1368b",
       "metadata": {},
       "outputs": [
@@ -2459,7 +2459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 240,
+      "execution_count": 275,
       "id": "5761e9ea",
       "metadata": {},
       "outputs": [
@@ -2500,7 +2500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 241,
+      "execution_count": 276,
       "id": "c89ba2c2",
       "metadata": {},
       "outputs": [
