Turunkan ekspektasi metrics eval; Penambahan fitur SHAP; (Jangan lupa update envi!!!

--- a/Notebook/01_Business Understanding.ipynb
+++ b/Notebook/01_Business Understanding.ipynb
@@ -55,7 +55,7 @@
         "- **MAE** mengukur rata-rata selisih absolut antara harga aktual dan harga hasil prediksi, sehingga memberikan gambaran seberapa besar deviasi model terhadap nilai sebenarnya dalam satuan mata uang.\n",
         "- **MAPE** mengukur persentase kesalahan relatif terhadap harga aktual, yang menunjukkan seberapa besar error model dalam konteks proporsional.\n",
         "\n",
-        "Sebagai target awal, model dianggap berhasil apabila mencapai **MAE ≤ 10% dari median harga** dan **MAPE ≤ 20%**, dengan ambang batas ini dapat disesuaikan sesuai kebutuhan bisnis dan karakteristik data."
+        "Sebagai target awal, model dianggap berhasil apabila mencapai **MAE <= 20% dari median harga**, dengan ambang batas ini dapat disesuaikan sesuai kebutuhan bisnis dan karakteristik data."
       ]
     }
   ],
