--- a/Notebook/04_Deployment.ipynb
+++ b/Notebook/04_Deployment.ipynb
@@ -1610,9 +1610,7 @@
     "\n",
     "### 3. Platform Jual Beli Mobil\n",
     "- Model dipanggil saat penjual mengisi form kendaraan\n",
-    "- Harga rekomendasi ditampilkan secara real-time\n",
-    "\n",
-    "Tahap berikutnya dalam TDSP adalah **Customer or Stakeholder Acceptance**."
+    "- Harga rekomendasi ditampilkan secara real-time"
    ]
   }
  ],
